[package]
name = "memusage"

version = "0.1.0"
edition = "2021"
authors = ["Andres <agrc14@gmail.com>"]

description = "Small trait utility to keep track of the memory usage of structs"

readme = "README.md"
repository = "https://github.com/micro-rust/memusage"
license-file = "LICENSE"



keywords = ["utility", "memory", "usage"]

categories = ["memory-management"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
